@@ -15,6 +15,9 @@ TODO
 * update man pages
 * add glib support
 
+20131017
+* updated libcstring
+
 20131003
 * Bug fixes for RW lock XP version, with thanks to Phillip Hellewell
 
